--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
-  text-align: center;
+:root {
+  --purple-theme: #5e36b5;
+  --dark-purple-theme: #180443;
+  --white: #fff;
+  --blue: #4a90e2;
+  --green: #01ffb3;
+  --dark: #080116;
+
+  --small-header: 20px;
+  --mini-header: 34px;
+  --body-copy: 14px;
+  --main-header: 64px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.value {
+  color: var(--blue);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*,
+:after,
+:before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: 'Verdana', sans-serif;
+  background: var(--dark);
+  color: var(--white);
+  position: relative;
+  /* padding-top: 90px; */
+}
+
+.smallHeader {
+  font-size: var(--small-header);
+  line-height: 1.4;
+}
+.miniHeader {
+  font-size: var(--mini-header);
+  line-height: 1.4;
+}
+.bodyCopy {
+  font-size: var(--body-copy);
+  font-weight: lighter;
+}
+.mainHeader {
+  font-size: var(--main-header);
+  line-height: 1.4;
+}
+.bgDark {
+  background: var(--dark-purple-theme);
+  padding: 60px 50px;
+}
+
+.nav {
+  height: 110px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--dark);
+}
+.nav .container {
+  height: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.customBtn {
+  padding: 15px 30px;
+  background: transparent;
+  border: 2px solid var(--green);
+  color: var(--green);
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+#hero {
+  display: grid;
+  min-height: 100vh;
+  place-items: center;
+}
+.marginHeader {
+  margin: 30px 0;
+}
+.webAddress {
+  display: flex;
+  align-items: center;
+}
+.webAddress a {
+  color: var(--blue);
+  text-decoration: none;
+  font-size: var(--body-copy);
+  font-weight: bold;
+}
+.socialIcons {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  align-items: stretch;
+  height: 100%;
+  padding-left: 0;
+}
+.divider {
+  height: 1px;
+  width: 100%;
+  background-color: var(--white);
+  opacity: 0.1;
+}
+.spacer {
+  margin: 32.48px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.countdown {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .bgDark {
+    padding: 60px 30px;
   }
 }
