--- a/src/App.css
+++ b/src/App.css
@@ -111,13 +111,59 @@ body {
   margin: 32.48px 0;
 }
 
-.countdown {
+.timer {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  background: var(--dark);
+  color: var(--white);
+  margin: 0 15px 0 0;
+  font-size: var(--mini-header);
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 34px;
+  border: 2px solid var(--purple-theme);
+}
+
+.timer:before {
+  content: '';
+  position: absolute;
+  bottom: -3%;
+  left: 0;
+  width: 100%;
+  height: 35px;
+  color: #fff;
+  font-size: var(--body-copy);
+  line-height: 35px;
+  font-weight: 200;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.timer#day::before {
+  content: 'Days';
+}
+
+.timer#hour::before {
+  content: 'Hours';
+}
+
+.timer#minute::before {
+  content: 'Minutes';
+}
+
+.timer#second::before {
+  content: 'Seconds';
 }
 
 @media screen and (max-width: 768px) {
   .bgDark {
     padding: 60px 30px;
+  }
+
+  .timer {
+    font-size: var(--small-header);
   }
 }
