--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 body {
   font-family: 'Verdana', sans-serif;
   background: var(--dark);
-  color: var(--white);
+  color: var(--white) !important;
   position: relative;
   /* padding-top: 90px; */
 }
