--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --blue: #4a90e2;
   --green: #01ffb3;
   --dark: #080116;
+  --yellow: #df9628;
 
   --small-header: 20px;
   --mini-header: 34px;
@@ -77,7 +78,7 @@ body {
   text-decoration: none;
 }
 
-#hero {
+#sales {
   display: grid;
   min-height: 100vh;
   place-items: center;
@@ -199,6 +200,33 @@ select:focus {
   background: var(--purple-theme);
   color: var(--white);
   opacity: 0.5;
+}
+
+.progress-bar {
+  width: 25%;
+  background: var(--yellow);
+}
+
+footer {
+  margin-top: 5rem;
+  min-height: 40vh;
+  display: grid;
+  place-items: center;
+}
+
+footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+footer ul li {
+  margin: 10px 0;
+}
+
+footer ul a {
+  color: var(--white);
+  text-decoration: none;
+  font-size: var(--body-copy);
 }
 
 @media screen and (max-width: 768px) {
